changed about section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
           I have hands-on experience building MEAN stack applications (MongoDB, Express, Angular, Node.js), deploying them on platforms like Vercel and MongoDB Atlas, and integrating APIs and databases for real-world use cases.
         </p>
         <p>
-          Beyond coding, I'm continuously learning advanced technologies like Cloud Solution Architecture (CSA), Cloud Application Development (CAD), and Ethical Hacking to strengthen both my development and security knowledge.
+          Beyond coding, I'm continuously learning advanced technologies like ServiceNow Certified system administrator (CSA), certified application developer (CAD), and AI tools to strengthen both my development and security knowledge.
         </p>
         <p>
           My goal is to become a skilled Software Engineer who can design scalable, secure, and efficient systems that make a real impact.
